[package]
name = "docker_metrics_exporter"
version = "0.1.0"
edition = "2024"

[dependencies]
futures = "0.3"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
prometheus = "0.13"
influxdb = { version = "0.7", features = ["derive", "reqwest-client"] }
chrono = { version = "0.4", features = ["serde"] }
warp = "0.3"
regex = "1"


